incorrect return fields issue fixed